# rust-ssh-honeypot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  init.sql  otel-collector-config.yaml
src/: main.rs
src/ssh/: client_handler.rs  mod.rs  server_handler.rs
