[package]
name = "ssh-honeypot"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto="fat"
strip="symbols"

[dependencies]
russh = { version = "0.34.0-beta.16", features = ["openssl"] }
russh-keys = "0.22.0-beta.7"
futures = "^0.3.0"
tokio = { version = "^1.0.0", features = ["full", "tracing"] }
anyhow = "^1.0.65"
tracing = "^0.1.36"
tracing-log = "*"
tracing-futures = "^0.2.5"
tracing-subscriber = { version = "^0.3.15", features = ["env-filter"] }
tracing-opentelemetry = "^0.18.0"
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = "*"
opentelemetry-semantic-conventions = "*"
uuid = { version = "1.1.2", features = ["v4"] }
deadpool-postgres = "0.10.2"
tokio-postgres = "*"
postgres-types = { version = "*", features = ["derive"] }
# async-trait = "^0.1.57"